--- a/style.css
+++ b/style.css
@@ -20,4 +20,10 @@ h3 {margin-left: 70%;
 h3 {padding-right: 40%;
 }
 
+.parte001 {background-color: black;}
+
+.parte002 {background-color: white;}
+
+.parte003 {background-color: crimson;}
+
 
